# ms-thesis

./: .gitignore  .gitmodules  __main__.py  download.py  pyproject.toml
Playground/: __init__.py  adam_vs_sparse_adam.py  compare.py  idk.py  linear_regression.py  masked.py  mnist.py  mnist_masked.py  mnist_sparse.py  non_linearity.py  other.py  playground.py  randy_tests.py  sparse_csr.py  test.py  time_models.py
Playground/training/: __init__.py  create_models.py  load_mnist.py  train.py
Playground/util/: num_trainable_parameters.py
Sequential2D/: FlatSequential2D.py  IterativeSequential2D.py  MaskedLinear.py  RecurrentSequential2D.py  Sequential2D.py  SparseAdam.py  SparseLinear.py  __init__.py
Sequential2D/LinearLayers/: MaskedLinear.py  SparseLinear.py  SparseLinearOld.py
Sequential2D/Tests/: test_flat_sequential2d.py  test_mask.py  (+6 more)
cifar10/: README.md  children_graphs.py  create_sweep.py  feed_forward_baseline.py  generate_children.py  generate_data.py  generate_graphs.py  graph_data.py  load_cifar.py  playground.py  run_sweep.py  singular_values.py  slurm.sh  temp.py  test.py  train.py  wandb_run.py
cifar10_old/: generate_data.py  generate_graphs.py  playground.py  singular_values.py
lux/: LuxEnv.py  README.md
lux_gym/: LuxEnv.py
mnist/: create_sweep.py  download_data.py  generate_data.py  mask_data.txt  run_sweep.py  slurm.sh  test.py  train_mnist.py  train_model.py  visualize_data.py  wandb_project.py
training/: __init__.py  load_mnist.py  train.py
util/: __init__.py  generate_data.py  random_mask.py  sparse_csr_functions.py  train.py
(+110 files in other folders)
