[tool.poetry]
name = "sequential2d"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = "^2.8.0"
torchvision = "^0.23.0"
numpy = "^2.3.3"
wandb = "^0.22.2"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
scikit-learn = "^1.7.2"
pillow = "^11.3.0"
pyarrow = "^21.0.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"